  + Ignore NUMA node information from AMD topoext in the x86 backend,
    unless HWLOC_X86_TOPOEXT_NUMANODES=1 is set in the environment.
  + Expose Linux DAX devices as hwloc Block OS devices.
  + Remove support for /proc/cpuinfo-only topology discovery in Linux
    kernel prior to 2.6.16.
  + Discovery components are now divided in phases that may be individually
    blacklisted.
* Tools
  + lstopo
    - lstopo factorizes objects by default in the graphical output when
      there are more than 4 identical children.
      New options --no-factorize and --factorize may be used to configure this.
      Also hit the 'f' key to disable factorizing in interactive outputs.
    - Both logical and OS/physical indexes are now displayed by default
      for PU and NUMA nodes.
    - The X11 and Windows interactive outputs support many keyboard
      shortcuts to dynamically customize the attributes, legend, etc.
    - Add --linespacing and change default margins and linespacing.
    - Add --allow for changing allowed sets.
    - Add a native SVG backend. Its graphical output may be slightly less
      pretty than Cairo (still used by default if available) but the SVG
      code provides attributes to manipulate objects from HTML/JS.
      See dynamic_SVG_example.html for an example.
  + Add --nodeset options to hwloc-calc for converting between cpusets and
    nodesets.
  + hwloc-annotate may annotate multiple locations at once.
  + Add a HTML/JS version of hwloc-ps. See contrib/hwloc-ps.www/README.
  + Add bash completions.


Version 2.0.4 (also included in 1.11.13 when appropriate)
-------------
* Add support for Linux 5.3 new sysfs cpu topology files with Die information.
* Add support for Intel v2 Extended Topology Enumeration in the x86 backend.
* Tiles, Modules and Dies are exposed as Groups for now.
  + HWLOC_DONT_MERGE_DIE_GROUPS=1 may be set in the environment to prevent
    Die groups from being automatically merged with identical parent or children.