@@ -25,7 +25,7 @@ export HWLOC_DONT_ADD_VERSION_INFO
 HWLOC_DEBUG_SORT_CHILDREN=1
 export HWLOC_DEBUG_SORT_CHILDREN
 
-HWLOC_COMPONENTS=linux,linuxio,stop
+HWLOC_COMPONENTS=linux,stop
 export HWLOC_COMPONENTS
 
 actual_output="$1"
