@@ -74,6 +74,7 @@ Version 2.1.0
     kernel prior to 2.6.16.
   + Discovery components are now divided in phases that may be individually
     blacklisted.
+    - The linuxio component has been merged back into the linux component.
 * Tools
   + lstopo
     - lstopo factorizes objects by default in the graphical output when
